--- a/static/styles.css
+++ b/static/styles.css
@@ -46,7 +46,7 @@ h2 {
     margin-right: 20px;
 }
 
-.inline input[type="text"]{
+.inline input[type="number"]{
     border: none;
     border-bottom: 1px solid #fff;
     background: transparent;
